2004-02-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tkTable.tcl (::tk::table::Button1): account for what
	resizeborders are set when selecting cell [Bug 876320] (ferenc) 

2003-12-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: updated to TEA3 spec
	* configure:
	* configure.in:
	* generic/tkTable.c:
	* generic/tkTableInitScript.h:
	* generic/version.h:
	* mac/mac_tkTable.r:
	* tclconfig/tcl.m4:

	* win/makefile.vc: minor updates, probably still out of date

	* tclconfig/ChangeLog (removed): not necessary

	* generic/tkTable.c: added Tk_ClassProcs and TableWorldChanged
	proc if built against 8.4

	* generic/tkTable.h: add 8.4 ifdef, remove ANSI_ARGS usage

2003-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/tkTable.n: add note about -window "" behavior

2003-04-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regen
	* tclconfig/tcl.m4: updated

	* library/tkTable.tcl (BeginExtend): avoid error in tables that
	have no anchor index yet. (renshaw)

2003-04-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regen
	* tclconfig/tcl.m4: Updated to newest tcl.m4, (WinCE support)

	* demos/loadtable.tcl: redefine 'puts' on Windows CE

	* generic/tkTable.c (TableDisplay): correctly copy clipwindow area
	for NO_XSETCLIP case and use that when UNDER_CE as well.  Also add
	support for drawing ellipsis in NO_XSETCLIP case.
	Comment out OffsetClipRgn call - it was a noop.

2003-04-04  Andreas Kupries  <andreask@activestate.com>

	* configure.in:
	* tclconfig/tcl.m4: Updated to newest tcl.m4, regenerated
	  configure's.

2003-02-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTable.c (TableDisplay): do not use buffer pixmap for
	slow -drawmode on Win32 because we aren't clipping it correctly.

2003-01-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: remove use of nested $(PACKAGE) to enable building
	on older, cruftier make versions

	* doc/tkTable.n:        add -ellipsis tag /global option which